# otelmewhy

./: .env.defaults  .gitignore  CLAUDE.md  README.md  conftest.py  db.sqlite3  justfile  manage.py  packages.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
backend/: client.py  gunicorn.conf.py  justfile  pyproject.toml  settings.py  test_client_timing.py  tracing.py  urls.py
backend/memes/: models.py  tests.py  urls.py  utils.py  views.py
backend/memes/migrations/: 0001_initial.py
frontend/: client.py  gunicorn.conf.py  justfile  pyproject.toml  settings.py  test-data.json  test_system.py  tracing.py  urls.py  views.py  wsgi.py
frontend/static/frontend/css/: style.css
frontend/templates/frontend/: meme_generator.html
memes/: urls.py  utils.py
otelmewhy/: asgi.py  settings.py  urls.py  wsgi.py
